# alphavantage

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOT_env_EXAMPLE  LICENSE  README.md  REFACTORING_PLAN_CRYPTO_PREFIXES.md  out.fil  output.txt  rustfmt.toml
crates/av-api/: Cargo.toml
crates/av-api/src/: builder.rs  error.rs  lib.rs  prelude.rs  queries.rs
crates/av-cli/: Cargo.toml
crates/av-cli/src/: config.rs  main.rs
crates/av-cli/src/commands/: crypto_mapping.rs  mod.rs  query.rs  sync.rs
crates/av-cli/src/commands/load/: coins_market.rs  crypto.rs  crypto_details.rs  crypto_intraday.rs  crypto_mapping.rs  crypto_markets.rs  crypto_metadata.rs  crypto_news.rs  crypto_overview.rs  crypto_prices.rs  crypto_social.rs  crypto_symbols.rs  crypto_top_movers.rs  daily.rs  intraday.rs  missing_symbol_logger.rs  missing_symbols.rs  mod.rs  news.rs  news_utils.rs  numeric_helpers.rs  overviews.rs  securities.rs  sid_generator.rs  top_movers.rs
crates/av-cli/src/commands/update/: crypto.rs  crypto_metadata_etl.rs  crypto_update_cli.rs  crypto_update_functions.rs  mod.rs  stats.rs
crates/av-client/: Cargo.toml
crates/av-client/examples/: news_analysis.rs  portfolio_tracker.rs
crates/av-client/src/: client.rs  lib.rs  transport.rs
crates/av-client/src/endpoints/: crypto.rs  crypto_social.rs  forex.rs  fundamentals.rs  mod.rs  news.rs  time_series.rs
crates/av-core/: Cargo.toml  README.md
crates/av-core/src/: config.rs  error.rs  lib.rs  test_utils.rs
crates/av-core/src/types/: common.rs  market.rs  mod.rs
crates/av-core/src/types/market/: classifications.rs  exchange.rs  mod.rs  region.rs  security_type.rs
crates/av-database/postgres/: .env  Cargo.toml  Makefile  diesel.toml
crates/av-database/postgres/base_migration/: down.sql  up.sql
crates/av-database/postgres/migrations/2025-07-07-234334_initial_table_creation/: down.sql  up.sql
crates/av-database/postgres/migrations/2025-07-09-035112_add_author/: down.sql  up.sql
crates/av-database/postgres/migrations/2025-07-09-035836_add_source/: down.sql  up.sql
crates/av-database/postgres/migrations/2025-07-09-040744_add_articles/: down.sql  up.sql
crates/av-database/postgres/migrations/2025-07-22-014537_proc_tracking/: down.sql  up.sql
crates/av-database/postgres/migrations/2025-07-22-030216_proc_tracking_addendum/: down.sql  up.sql
crates/av-database/postgres/migrations/2025-07-27-073457_initial_setup/: down.sql
crates/av-database/postgres/migrations/2025-07-28-185717_crypto/: down.sql  up.sql
crates/av-database/postgres/migrations/2025-07-28-194442_split_crypto_overviews/: down.sql  up.sql
crates/av-database/postgres/migrations/2025-07-29-031058_base_tables/: down.sql
crates/av-database/postgres/migrations/2025-08-10-061725_initial_setup/: up.sql
crates/av-database/postgres/migrations/2025-08-10-224156_crypto_stuffs/: down.sql  up.sql
crates/av-database/postgres/migrations/2025-09-08-202748_crypto_markets/: down.sql  up.sql
crates/av-database/postgres/migrations/2025-09-12-184549_api_cache/: down.sql  up.sql
crates/av-database/postgres/migrations/2025-09-18-232356_mod_crypto_social/: down.sql  up.sql
crates/av-database/postgres/migrations/2025-10-17-190230_init_db/: down.sql  up.sql
crates/av-database/postgres/migrations/2025-11-16-073552-0000_create_symbol_mappings/: down.sql  up.sql
crates/av-database/postgres/migrations/2025-11-16-170618-0000_create_missing_symbols/: down.sql  up.sql
crates/av-database/postgres/migrations/2026-02-06-223656-0000_add_crypto_market_fields/: down.sql  up.sql
crates/av-database/postgres/migrations/2026-02-07-020640-0000_expand_numeric_precision/: down.sql  up.sql
crates/av-database/postgres/migrations/2026-02-08-012902-0000_create_crypto_top_movers/: down.sql  up.sql
crates/av-database/postgres/scripts/: backup_postgres.sh  populate_for_symbol.sh  populate_intraday_from_year.sh  test_connection.sh
crates/av-database/postgres/src/: connection.rs  lib.rs  repository.rs  schema.rs
crates/av-database/postgres/src/models/: crypto.rs  crypto_markets.rs  missing_symbols.rs  mod.rs  news.rs  price.rs  process.rs  security.rs
crates/av-database/postgres/src/repositories/: mod.rs  symbol_repository.rs
crates/av-loaders/: Cargo.toml  README.md
crates/av-loaders/src/: batch_processor.rs  cache.rs  csv_processor.rs  error.rs  intraday_price_loader.rs  lib.rs  loader.rs  loaders.rs  news_loader.rs  overview_loader.rs  process_tracker.rs  security_loader.rs  summary_price_loader.rs  top_movers_loader.rs
crates/av-loaders/src/base/: concurrent.rs  config.rs  mod.rs  progress.rs  statistics.rs
crates/av-loaders/src/crypto/: coingecko_details_loader.rs  crypto_news_loader.rs  database.rs  intraday_loader.rs  loader.rs  mapping_service.rs  markets_loader.rs  metadata_loader.rs  metadata_providers.rs  metadata_types.rs  mod.rs  news_loader.rs  social_loader.rs  types.rs
crates/av-loaders/src/crypto/sources/: coincap.rs  coingecko.rs  coinmarketcap.rs  (+3 more)
crates/av-models/: Cargo.toml
crates/av-models/src/: common.rs  crypto.rs  crypto_social.rs  forex.rs  fundamentals.rs  lib.rs  news.rs  time_series.rs
crates/av-web/: Cargo.toml
crates/av-web/src/: main.rs
crates/av-web/src/routes/: load.rs  mod.rs  movers.rs  news.rs  search.rs  sources.rs
crates/av-web/static/: style.css
crates/av-web/templates/: base.html  load.html  movers.html  news.html  search.html  sources.html
crates/crypto-loaders/: Cargo.toml
crates/crypto-loaders/src/: error.rs  lib.rs  traits.rs  types.rs
crates/crypto-loaders/src/loaders/: details_loader.rs  mod.rs  symbol_loader.rs  top_movers_loader.rs
crates/crypto-loaders/src/mapping/: discovery.rs  mod.rs  service.rs
crates/crypto-loaders/src/metadata/: coingecko_provider.rs  mod.rs  types.rs
crates/crypto-loaders/src/providers/: coincap.rs  coingecko.rs  coinmarketcap.rs  coinpaprika.rs  mod.rs  sosovalue.rs
crates/crypto-loaders/src/social/: loader.rs  mod.rs
crates/loader-base/: Cargo.toml
crates/loader-base/src/: concurrent.rs  config.rs  error.rs  lib.rs  progress.rs  statistics.rs
(+43 files in other folders)
