[workspace]
members = [
  "crates/av-database/postgres",
  "crates/av-core",
  "crates/av-models",
  "crates/av-client",
  "crates/av-loaders",
  "crates/av-cli"
]
  resolver = "2"
[workspace.package]
version = "0.1.0"
authors = ["Dwight Browne <dwight@dwightjbrowne.com"]
edition = "2021"
rust-version = "1.86.0"
readme = "README.md"
repository = "https://github.com/dbrowne/alphavantage"
homepage = "https://github.com/dbrowne/alphavantage"
keywords = ["alphavantage", "finance", "api", "trading", "market-data"]
categories = ["api-bindings", "finance"]
license = "MIT"

[workspace.lints.rust]
unused_imports = "deny"
unused_variables = "warn"
dead_code = "warn"



[workspace.dependencies]
# Async runtime
tokio = { version = "1.46.1", features = ["full"] }

# Serialization
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.140"

# Error handling
thiserror = "2.0.12"
anyhow = "1.0.98"

#environment handling
dotenvy = "0.15.0"

# Logging and tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
log = "0.4.28"

# Time handling
chrono = { version = "0.4.41", features = ["serde"] }

# Database
diesel = { version = "2.2.11", features = ["postgres", "chrono", "uuid", "numeric", "r2d2", "serde_json", "postgres_backend"] }
diesel-async = { version = "0.6.1", features = ["postgres", "bb8"] }
diesel_migrations = "2.2.0"
bb8 = "0.9.0"

# HTTP client
reqwest = { version = "0.12.22", features = ["json"] }
async-trait ={version = "0.1.88"}
rayon = {version ="1.10.0"}

# Utility
url = "2.5.4"
futures = "0.3.1"
uuid = { version = "1.17", features = ["serde", "v4"] }
bigdecimal = { version = "0.4.8", features = ["serde"] }
csv = "1.3.1"
dotenv = "0.15.0"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
indicatif = "0.18.0"


# Development dependencies
# Optimize release builds
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Optimize for size if needed
[profile.release-small]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Development profile with some optimizations
[profile.dev]
opt-level = 0
debug =  true
overflow-checks = true

[profile.dev.package."*"]
opt-level = 0

# Test profile with optimizations
[profile.test]
opt-level = 2

# Benchmark profile
[profile.bench]
opt-level = 3
lto = true
codegen-units = 1


