[package]
name = "av-cli"
version = "0.1.0"
edition = "2021"
authors = ["Dwight Browne <dwught@dwightjbrowne.com>"]
description = "Command-line interface for AlphaVantage data loading"
license = "MIT"
repository = "https://github.com/dbrowne/alphavantage.git"
default-run = "av"

[[bin]]
name = "av"
path = "src/main.rs"

[dependencies]
av-core = { path = "../av-core", version = "0.1.0" }
av-client = { path = "../av-client", version = "0.1.0" }
av-models = { path = "../av-models", version = "0.1.0" }
av-database-postgres = { path = "../av-database/postgres", version = "0.1.0" }  # Fixed
av-loaders = { path = "../av-loaders", version = "0.1.0" }
diesel = {workspace = true}
# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Progress bars
indicatif = "0.17"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.41"

[dev-dependencies]
tempfile = "3.8"
