[package]
name = "av-core"
version = "0.1.0"
authors = ["Dwight Browne <dwight@dwightjbrowne.com>"]
edition = "2021"
rust-version = "1.70.0"
license = "MIT"
repository = "https://github.com/dbrowne/alphavantage"
description = "Core types and traits for AlphaVantage Rust client"

[dependencies]
thiserror = { workspace = true}
serde = {  workspace = true}
chrono = {  workspace = true}
dotenvy = {workspace = true}
url = { workspace = true}
serde_json = "1.0"

[features]
# Feature for test utilities
test-utils = []