[package]
name = "av-loaders"
version = "0.1.0"
edition = "2021"
authors = ["Dwight Browne <dwight@dwightjbrowne.com>"]
description = "Data loaders for AlphaVantage market data"
license = "MIT"
repository = "https://github.com/dbrowne/alphavantage.git"


[dependencies]
av-core = {path = "../av-core", version = "0.1.0"}
av-client = { path = "../av-client", version = "0.1.0" }
av-models = { path = "../av-models", version = "0.1.0" }
# External dependencies
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
thiserror = "1.0"
indicatif = "0.17"
rayon = "1.8"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.8"
