[package]
name = "av-loaders"
version = "0.1.0"
edition = "2021"
authors = ["Dwight Browne <dwight@dwightjbrowne.com>"]
description = "Data loaders for AlphaVantage market data"
license = "MIT"
repository = "https://github.com/dbrowne/alphavantage.git"

[lints]
workspace = true



[dependencies]
av-core = {path = "../av-core", version = "0.1.0"}
av-client = { path = "../av-client", version = "0.1.0" }
av-models = { path = "../av-models", version = "0.1.0" }
av-database-postgres = { path = "../av-database/postgres", version = "0.1.0"}
# External dependencies
tokio = { workspace = true}
futures = { workspace = true}
async-trait = {workspace = true}
csv = {workspace = true}
serde = {workspace = true} 
serde_json = {workspace = true}
chrono = { workspace = true}
tracing = {workspace = true}
thiserror = {workspace = true}
indicatif = {workspace = true}
rayon = {workspace = true}
anyhow = {workspace = true}
clap = {workspace = true}
diesel = {workspace = true}
reqwest = {workspace = true}
bigdecimal = {workspace = true}
rust_decimal = "1.37.2"
tracing-subscriber = "0.3.19"
url = "2.5.4"
[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.8"
