[package]
name = "av-models"
version = "0.1.0"
edition = "2021"
description = "Data models for AlphaVantage API responses"
license = "MIT"
repository = "https://github.com/dbrowne/AlphaVantage_Rust"
documentation = "https://docs.rs/av-models"
keywords = ["alphavantage", "finance", "api", "models", "stocks"]
categories = ["api-bindings", "finance", "data-structures"]

[dependencies]
av-core = { path = "../av-core", version = "0.1.0" }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Date/time handling
chrono = { version = "0.4.41", features = ["serde"] }

# For decimal numbers in financial data
rust_decimal = { version = "1.37.2", features = ["serde-float"] }

[dev-dependencies]
serde_test = "1.0.177"
tracing-subscriber = "0.3.19"

[features]
default = []
# Enable additional validation
validation = []
