[package]
name = "av-database-postgres" 
version.workspace =  true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TimescaleDB integration for AlphaVantage time-series data using diesel-async"
keywords = ["alphavantage", "timescaledb", "postgresql", "diesel", "async"]
categories = ["database", "finance"]

[dependencies]
chrono = {workspace = true}
diesel = {workspace = true}
diesel-async = {workspace = true}
bb8 = {workspace = true}
serde = {workspace = true} 

serde_json = {workspace = true}
bigdecimal = {workspace = true}
reqwest = "0.12.23"

[dev-dependencies]
serial_test = "3.2.0"
tempfile = "3.20.0"
dotenv = { workspace = true }
pretty_assertions = "1.4.1"
tokio = { workspace = true, features = ["test-util", "macros"] }
